tests/errors/type_mismatch_subtraction.dang
# Test subtraction type mismatch
let result = "hello" - 42
